# Workflow-Templates

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  golang.yml  node.yml  python.yml
.github/workflows/: cmake.yml  golang.yml  java.yml  node.yml  python.yml  rust.yml
examples/cpp/: CMakeLists.txt  main.cpp
examples/golang/: go.mod
examples/java/: settings.gradle
examples/java/app/: build.gradle
examples/java/app/src/main/java/java/: App.java
examples/java/app/src/main/java/javaGradle/: App.java
examples/java/app/src/test/java/java/: AppTest.java
examples/java/app/src/test/java/javaGradle/: AppTest.java
examples/node/: package-lock.json  package.json
examples/python/: main.py  requirements.txt
workflows/: cmake.yml  golang.yml  java-gradle.yml  node.yml  python.yml  rust.yml
